updated the website

--- a/software.html
+++ b/software.html
@@ -77,7 +77,7 @@ MathJax.Hub.Config({
 </li>
 <li><p><b>Operating system(s):</b> Platform independent</p>
 </li>
-<li><p><b>Programming language:</b> <a href="https://julialang.org/" target=&ldquo;blank&rdquo;><img src="https://julialang.org/v2/img/logo.svg" height="20" /></a></p>
+<li><p><b>Programming language:</b> <a href="https://julialang.org/" target=&ldquo;blank&rdquo;><img src="https://julialang.org/assets/infra/logo.svg" height="20" /></a></p>
 </li>
 <li><p><b>Other requirements:</b> <a href="https://github.com/JuliaOpt/JuMP.jl" target=&ldquo;blank&rdquo;><img src="https://camo.githubusercontent.com/31d60f762b44d0c3ea47cc16b785e042104a6e03/68747470733a2f2f7777772e6a756c69616f70742e6f72672f696d616765732f6a756d702d6c6f676f2d776974682d746578742e737667" height="20" /></a></p>
 </li>
