updated the website

--- a/publications.html
+++ b/publications.html
@@ -31,9 +31,9 @@ MathJax.Hub.Config({
 <h1>Mojtaba Tefagh &ndash; Publications</h1>
 <div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a></div>
 </div>
-<table class="imgtable"><tr><td>
-<img src="word_art.png" alt="Word cloud of keywords" width="200px" />&nbsp;</td>
-<td align="left"><dl>
+<div class="infoblock">
+<div class="blockcontent">
+<dl>
 <dt><a href="papers/ABCD.html">Atomic bonded cross-chain debt</a></dt>
 <dd><p>
 M. Tefagh, F. Bagheri, A. Khajehpour, and M. Abdi, <i>ICBTA</i>, 2020.</p></dd>
@@ -50,7 +50,7 @@ M. Tefagh and S.P. Boyd, <i>J. Math. Biol.</i>, 2019.</p></dd>
 <dd><p>
 S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.</p></dd>
 </dl>
-</td></tr></table>
+</div></div>
 <h2>Dissertation</h2>
 <table class="imgtable"><tr><td>
 <a href="https://books.google.com/books?id=iGTsxgEACAAJ"><img src="QR_code.png" alt="QR code" width="200px" height="200px" /></a>&nbsp;</td>
