updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -33,10 +33,13 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
-<h3>Linear Algebra I</h3>
-<p></p>
-<h3>Applied Linear Algebra</h3>
-<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+<h3><b>22255</b> Linear Algebra I</h3>
+<p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus II<br />
+</p>
+<h3><b>TBD</b> Applied Linear Algebra</h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br />
+
+This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
 </p>
 <h2>Previous classes</h2>
 <h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
