--- a/teaching.html
+++ b/teaching.html
@@ -37,4 +37,36 @@ MathJax.Hub.Config({
 <p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
-<td align="left">
+<td align="left"><p>Vector space, dimension, duality, linear mappings, matrices, invertible matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, euclidean structure, self-adjoint mappings, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, the Jordan canonical form.</p>
+</td></tr></table>
+<p>ABC
+</p>
+<h3><b>TBD</b> Applied Linear Algebra</h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br /></p>
+<table class="imgtable"><tr><td>
+<img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
+<td align="left"><p>Duality, linear mappings, matrices, determinant, trace, spectral theory, euclidean structure, self-adjoint mappings, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, eigenvalues, the Jordan canonical form.</p>
+</td></tr></table>
+<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+</p>
+<h2>Previous classes</h2>
+<h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
+<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
+<table class="imgtable"><tr><td>
+<a href="http://sharif.edu/~mtefagh/bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
+</td></tr></table>
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
+</p>
+<h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a><br /></h3>
+<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<table class="imgtable"><tr><td>
+<a href="http://sharif.edu/~mtefagh/cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
+</td></tr></table>
+<p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a/">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
+</td>
+</tr>
+</table>
+</body>
+</html>
