updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -44,7 +44,7 @@ MathJax.Hub.Config({
 <h3><b>TBD</b> Applied Linear Algebra</h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
-<img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
+<img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" />&nbsp;</td>
 <td align="left"><p>Duality, linear mappings, matrices, determinant, trace, spectral theory, euclidean structure, self-adjoint mappings, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, eigenvalues, the Jordan canonical form.</p>
 </td></tr></table>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
