--- a/teaching.html
+++ b/teaching.html
@@ -37,15 +37,15 @@ MathJax.Hub.Config({
 <p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
-<td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, invertible matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
+<td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
 </td></tr></table>
-<p>This course covers the fundamentals of linear algebra with a focus on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
+<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
 </p>
 <h3><b>TBD</b> Applied Linear Algebra</h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" />&nbsp;</td>
-<td align="left"><p>Introduction to applied linear algebra with emphasis on applications. Vectors, norm, and angle; applications to document analysis. Clustering and the k-means algorithm. Matrices, left and right inverses, QR factorization. Least-squares and model fitting, regularization and cross-validation. Constrained and nonlinear least-squares. Applications include time-series prediction, tomography, optimal control, and portfolio optimization.</p>
+<td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include time-series prediction, tomography, optimal control, and portfolio optimization.</p>
 </td></tr></table>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
 </p>
