--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><b>22255</b> Linear Algebra I</h3>
-<p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
+<p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00pm | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
 <td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 <p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
 </p>
 <h3><b>TBD</b> Applied Linear Algebra</h3>
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br /></p>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" />&nbsp;</td>
 <td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.</p>
