updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><b>22255</b> Linear Algebra I</h3>
-<p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00pm | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
+<p>Term: Spring 2021 | Units: 4 | Section: TBD | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
 <td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
