updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -75,10 +75,10 @@ also serve as their office hours, starting the second week of class. Attendance 
 <h2>Prerequisites</h2>
 <p>Exposure to computer programming and good knowledge of linear algebra is a prerequisite or corequisite (as in 22255 or equivalent background).<br />
 
-You will use the relatively new <a href="https://julialang.org/">Julia</a> programming language to write <b></b>very simple<b></b> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected</p>
+You will use the relatively new <a href="https://julialang.org/">Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-11 17:05:44 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-11 17:08:07 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
