updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -23,7 +23,7 @@ MathJax.Hub.Config({
 <div class="menu-category">Applied Linear Algebra</div>
 <div class="menu-item"><a href="https://web.stanford.edu/~boyd/vmls/">Textbook</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
-<div class="menu-item"><a href="https://quera.ir/course/6014/">Quera</a></div>
+<div class="menu-item"><a href="https://quera.ir/course/7511/">Quera</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -44,10 +44,10 @@ MathJax.Hub.Config({
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available in the course Telegram group, hence you can watch the lectures asynchronously.
 </p>
 <h2>Homework</h2>
-<p>This year we have only programming assignments and we will use the <a href="https://quera.ir/overview/add_to_course/course/7511">Quera</a> online judge system to grade the coding exercises. The enrollment code for Quera is ALA. The problems and the deadlines to submit your solutions are also announced there.
+<p>This year we have only programming assignments and we will use the <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>Quera</a> online judge system to grade the coding exercises. The enrollment code for Quera is ALA. The problems and the deadlines to submit your solutions are also announced there.
 </p>
 <h2>Quera</h2>
-<p>Please use the course's <a href="https://quera.ir/course/7511/">Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution.
+<p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution.
 </p>
 <h2>Office hours</h2>
 <p><b>Mojtaba Tefagh's office hours:</b> Sundays and Tuesdays, 10:00&ndash;11:00 am, via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
@@ -70,15 +70,15 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 </ul>
 <h2>Textbook and optional references</h2>
-<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/" target=&ldquo;blank&rdquo;>ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>here</a>.
 </p>
 <h2>Prerequisites</h2>
-<p>Exposure to computer programming and good knowledge of linear algebra is a prerequisite or corequisite (as in 22255 or equivalent background).<br />
+<p>Exposure to computer programming and good knowledge of linear algebra (as in 22255 or equivalent background) is a prerequisite or corequisite.<br />
 
-You will use the relatively new <a href="https://julialang.org/">Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected</p>
+You will use the relatively new <a href="https://julialang.org/" target=&ldquo;blank&rdquo;>Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-11 17:08:07 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-11 17:57:35 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
