updated the website

--- a/papers/ABCD.html
+++ b/papers/ABCD.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
 Selected as the best presentation of <i>computer and information engineering</i> session of the <i>2020 3rd International Conference on Electronics and Communication Engineering</i> (ICECE 2020) and <i>2020 3rd International Conference on Blockchain Technology and Applications</i> (ICBTA 2020).</p>
 </li>
 <li><p><a href="ABCD.pdf" target=&ldquo;blank&rdquo;>Manuscript</a><br />
-This is a post-peer-review, pre-copyedit version of an article published in the proceedings of ICBTA 2020. The final authenticated version is available online at: <a href="https://dl.acm.org/conference/icbta/proceedings" target=&ldquo;blank&rdquo;>https://dl.acm.org/conference/icbta/proceedings</a></p>
+This is a post-peer-review, pre-copyedit version of an article published in the proceedings of ICBTA 2020. The definitive authenticated version is available online at: <a href="https://doi.org/10.1145/3446983.3446987" target=&ldquo;blank&rdquo;>https://doi.org/10.1145/3446983.3446987</a></p>
 </li>
 <li><p><a href="https://github.com/incentivus/ABCD" target=&ldquo;blank&rdquo;><tt>Reference implementation</tt></a><br />
 Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded cross-chain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other UTXO-based blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.</p>
