--- a/ala/home.html
+++ b/ala/home.html
@@ -38,37 +38,11 @@ MathJax.Hub.Config({
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
 <a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a>.
 </p>
-<h2>Lectures</h2>
-<p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
+<h2>Prerequisites</h2>
+<p>Exposure to computer programming and good knowledge of linear algebra (as in 22255 or equivalent background) is a prerequisite or corequisite.<br />
 
-Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available in the course Telegram group, hence you can watch the lectures asynchronously.
+You will use the relatively new <a href="https://julialang.org/" target=&ldquo;blank&rdquo;>Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected.
 </p>
-<h2>Homework</h2>
-<p>This year we have only programming assignments and we will use the <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>Quera</a> online judge system to grade the coding exercises. The enrollment code for Quera is ALA. The problems and the deadlines to submit your solutions are also announced there.
-</p>
-<h2>Quera</h2>
-<p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution.
-</p>
-<h2>Office hours</h2>
-<p><b>Mojtaba Tefagh's office hours:</b> Sundays and Tuesdays, 10:00&ndash;11:00 am, via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
-
-<b>TA office hours:</b>
-The TAs will offer informal working sessions via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>, that will
-also serve as their office hours, starting the second week of class. Attendance is not required.</p>
-<ul>
-<li><p>Aida Afshar: TBD</p>
-</li>
-<li><p>Kiana Asgari: TBD</p>
-</li>
-<li><p>Mobina Azimi: TBD</p>
-</li>
-<li><p>Mohammad Rashid: TBD</p>
-</li>
-<li><p>Nahid Sarem Sangari: TBD
-
-</p>
-</li>
-</ul>
 <h2>Textbook and optional references</h2>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/" target=&ldquo;blank&rdquo;>ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>here</a>.
 </p>
@@ -76,28 +50,19 @@ also serve as their office hours, starting the second week of class. Attendance 
 <ol>
 <li><p><b>Requirements:</b></p>
 <ol>
-<li><p><i>Weekly homework assignments</i>, due each Friday 5pm, starting February 21. You are allowed, even encouraged, to work on the homework in small groups, but you must write up your own homework to hand in. Each question on the homework will be graded on a scale of {0, 1, 2}. Some assignments require you to use convex programming software such as <a href="http://cvxr.com/cvx/" target=&ldquo;blank&rdquo;>CVX</a> (Matlab), <a href="https://www.cvxpy.org/" target=&ldquo;blank&rdquo;>CVXPY</a> (Python), <a href="http://convexjl.readthedocs.org" target=&ldquo;blank&rdquo;>Convex.jl</a> (Julia), or <a href="https://cvxr.rbind.io/" target=&ldquo;blank&rdquo;>CVXR</a> (R), which we refer to as CVX*.</p>
+<li><p><i>Attendance and participation at sections</i>.</p>
 </li>
-<li><p><i>Midterm quiz</i>. The format is an in-class, 75 minute, closed book, closed notes midterm scheduled for Sunday April 5.</p>
+<li><p><i>Weekly homework assignments</i>, due each Saturday 11:59 pm, starting the second week of class. You are allowed, even encouraged, to work on the homework in small groups, but you must write up your own homework to hand in. Most of the assignments require you to use the Julia programming language.</p>
 </li>
-<li><p><i>Final exam</i>.  The format is a 24 hour take home, scheduled for the last week of classes, nominally Sunday June 28&ndash;29.</p>
+<li><p><i>Theory quiz</i>. The format is a closed book, closed notes midterm, scheduled for the last week of classes before the Nowruz holiday break.</p>
+</li>
+<li><p><i>Applied quiz</i>. The format is a closed book, closed notes midterm, scheduled for about one month after the Nowruz holiday break.</p>
+</li>
+<li><p><i>Final exam</i>.  The format is an in-class, 120-minute exam, scheduled for Sunday July 4th 9:00 am.</p>
 </li></ol>
 </li>
-<li><p><b>Grading:</b> Homework 20%, midterm 10%, final exam 70%. These weights are approximate; we reserve the right to change them later.
+<li><p><b>Grading:</b> Homework 35%, theory quiz 20%, applied quiz 20%, final exam 25%. These weights are approximate; we reserve the right to change them later.
 </p>
 </li>
 </ol>
-<h2>Prerequisites</h2>
-<p>Exposure to computer programming and good knowledge of linear algebra (as in 22255 or equivalent background) is a prerequisite or corequisite.<br />
-
-You will use the relatively new <a href="https://julialang.org/" target=&ldquo;blank&rdquo;>Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected</p>
-<div id="footer">
-<div id="footer-text">
-Page generated 2021-01-13 07:57:31 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
-</div>
-</div>
-</td>
-</tr>
-</table>
-</body>
-</html>
+<h2>Homework</h2>
