updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -39,12 +39,12 @@ MathJax.Hub.Config({
 <a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a>.
 </p>
 <h2>Prerequisites</h2>
-<p>Exposure to computer programming and good knowledge of linear algebra (as in 22255 or equivalent background) is a prerequisite or corequisite.<br />
+<p>Exposure to computer programming and good knowledge of linear algebra (as in 22255 or equivalent background) is a prerequisite or corequisite.<br /><br />
 
 You will use the relatively new <a href="https://julialang.org/" target=&ldquo;blank&rdquo;>Julia</a> programming language to write <i>very simple</i> scripts for computations with vectors and matrices, so basic familiarity with elementary programming will be required. However, a strong background in programming (with Julia or otherwise) is not expected.
 </p>
 <h2>Textbook and optional references</h2>
-<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/" target=&ldquo;blank&rdquo;>ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>here</a>.
+<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are largely the same as that for <a href="https://web.stanford.edu/class/engr108/" target=&ldquo;blank&rdquo;>ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>here</a>.
 </p>
 <h2>Course requirements and grading</h2>
 <ol>
@@ -98,7 +98,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-13 09:28:51 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-13 09:34:00 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
