--- a/ala/home.html
+++ b/ala/home.html
@@ -69,7 +69,7 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 </li>
 </ol>
 <h2>Homework</h2>
-<p>This year we have mostly programming assignments, and we will use the Quera online judge system to grade the coding exercises. The enrollment code for Quera is ALA (sign up at <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>this link</a>). The problems will normally be assigned each Saturday, and due the following Saturday by 11:59 pm. However, the exact deadlines to submit your solutions are also announced on Quera.].<br />
+<p>This year we have mostly programming assignments, and we will use the Quera online judge system to grade the coding exercises. The enrollment code for Quera is ALA (sign up at <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>this link</a>). The problems will normally be assigned each Saturday, and due the following Saturday by 11:59 pm. However, the exact deadlines to submit your solutions are also announced on Quera.<br />
 
 You are given 7 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you need extra time because of a <b>serious problem</b>, use them wisely! The cutoff for on-time submission is 11:59:00 pm on the due date, and submitting at 11:59:01 pm is the same as 11:59:00 pm the next day. Late submissions will not be accepted after the hard deadline of 48 hours past the original due date.
 </p>
@@ -77,7 +77,7 @@ You are given 7 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you nee
 <p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution.
 </p>
 <h2>Lectures</h2>
-<p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.].<br />
+<p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available in CW, hence you can watch the lectures asynchronously.
 </p>
@@ -101,7 +101,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-13 10:18:27 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-13 10:20:38 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
