--- a/teaching.html
+++ b/teaching.html
@@ -41,10 +41,10 @@ MathJax.Hub.Config({
 </td></tr></table>
 <p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
 </p>
-<h3><a href="ala"><b>22659</b> Applied Linear Algebra</a></h3>
+<h3><a href="ala/home.html"><b>22659</b> Applied Linear Algebra</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
-<a href="http://sharif.edu/~mtefagh/ala"><img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" /></a>&nbsp;</td>
+<a href="./ala/home.html"><img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.</p>
 </td></tr></table>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
