updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -33,15 +33,15 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
-<h3><b>22255</b> Linear Algebra I</h3>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
-<img src="https://media.wiley.com/product_data/coverImage300/61/04717515/0471751561.jpg" alt="Linear algebra and its applications" width="250px" />&nbsp;</td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
 </td></tr></table>
 <p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
 </p>
-<h3><a href="ala/home.html"><b>22659</b> Applied Linear Algebra</a></h3>
+<h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./ala/home.html"><img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" /></a>&nbsp;</td>
@@ -50,7 +50,7 @@ MathJax.Hub.Config({
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
 </p>
 <h2>Previous classes</h2>
-<h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a></h3>
+<h3><a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
@@ -58,7 +58,7 @@ MathJax.Hub.Config({
 </td></tr></table>
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
 </p>
-<h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a></h3>
+<h3><a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a></h3>
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
