updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -21,9 +21,16 @@ MathJax.Hub.Config({
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Applied Linear Algebra</div>
+<div class="menu-item"><a href="home.html" class="current">Home</a></div>
+<div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="https://web.stanford.edu/~boyd/vmls/">Textbook</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
+<div class="menu-category">Assignments</div>
+<div class="menu-item"><a href="homework.html">Homework</a></div>
+<div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/7511/">Quera</a></div>
+<div class="menu-item"><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255/13992">Linear&nbsp;Algebra&nbsp;I</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -55,9 +62,7 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 <ol>
 <li><p><i>Attendance and participation at sections</i>.</p>
 </li>
-<li><p><i>Weekly homework assignments</i>, due each Saturday 11:59 pm, starting the second week of class. You are allowed, even encouraged, to work on the homework in small groups, but you must write up your own homework to hand in.<br />
-
-You will have theory problem sets for the first few weeks. Afterward, most of the assignments require you to use the Julia programming language.</p>
+<li><p><i>Biweekly homework assignments</i>, due on Saturdays by 11:59 pm, starting the second week of class. You are allowed, even encouraged, to work on the homework in small groups, but you must write up your own homework to hand in.</p>
 </li>
 <li><p><i>Theory quiz</i>. The format is a closed book, closed notes midterm, scheduled for the last week of classes before the Nowruz holiday break.</p>
 </li>
@@ -70,13 +75,11 @@ You will have theory problem sets for the first few weeks. Afterward, most of th
 </p>
 </li>
 </ol>
-<h2>Homework</h2>
-<p>This year we have mostly programming assignments, and we will use the Quera online judge system to grade the coding exercises. The enrollment code for Quera is ALA (sign up at <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>this link</a>). The problems will normally be assigned each Saturday, and due the following Saturday by 11:59 pm. However, the exact deadlines to submit your solutions are also announced on Quera.<br />
-
-You are given 7 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you need extra time because of a <b>serious problem</b>, use them wisely! The cutoff for on-time submission is 11:59:00 pm on the due date, and submitting at 11:59:01 pm is the same as 11:59:00 pm the next day. Late submissions will not be accepted after the hard deadline of 48 hours past the original due date.
+<h2>Homework grace period</h2>
+<p>You are given 7 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you need extra time because of a <b>serious problem</b>, use them wisely! The cutoff for on-time submission is 11:59:00 pm on the due date, and submitting at 11:59:01 pm is the same as 11:59:00 pm the next day. Late submissions will not be accepted after the hard deadline of 48 hours past the original due date.
 </p>
 <h2>Quera</h2>
-<p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution.
+<p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution. The enrollment code for Quera is ALA (sign up at <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>this link</a>).
 </p>
 <h2>Lectures</h2>
 <p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
@@ -103,7 +106,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-24 18:26:17 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-25 06:54:19 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
