--- a/ala/homework.html
+++ b/ala/homework.html
@@ -39,15 +39,15 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>This year we have mostly programming assignments, and we will use an online judge system to grade the coding exercises. The problems will normally be assigned on Saturdays, and due the Saturday after the next by 11:59 pm. However, the exact deadlines to submit your solutions are the same as those for Linear Algebra I announced in <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255/13992" target=&ldquo;blank&rdquo;>here</a>.</p>
+<p>This year we have mostly programming assignments, and we will use an online judge system to grade the coding exercises. The problems will normally be assigned on Saturdays, and due the Saturday after the next by 11:59 pm. However, the exact deadlines to submit your solutions are one day before those for Linear Algebra I announced in <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255/13992" target=&ldquo;blank&rdquo;>here</a>.</p>
 </div></div>
-<p>You will have theory problem sets for the first few weeks. Afterward, most of the assignments require you to use the Julia programming language.
+<p>You will have theory problem sets for the first few weeks. Afterward, most of the assignments require you to use the <a href="https://julialang.org/" target=&ldquo;blank&rdquo;>Julia</a> programming language.
 
 
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-25 06:55:04 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-02-10 20:37:01 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
