updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 <p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
 </p>
 <h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./ala/home.html"><img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Introduction to applied linear algebra" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.</p>
