updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -28,6 +28,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="homework.html">Homework</a></div>
+<div class="menu-item"><a href="readings.html">Readings</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/7511/">Quera</a></div>
 <div class="menu-item"><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255/13992">Linear&nbsp;Algebra&nbsp;I</a></div>
@@ -106,7 +107,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-13 14:22:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-02-16 11:02:13 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
