updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -41,5 +41,5 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="drawing_book.png" alt="Drawing of books" width="100px" />&nbsp;</td>
 <td align="left"><p>Unless otherwise noted, all reading assignments are from the 
-<a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
+<a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.</p>
 </td></tr></table>
