updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -36,6 +36,11 @@ MathJax.Hub.Config({
 <td id="layout-content">
 <div id="toptitle">
 <h1>22659 Applied Linear Algebra: Reading Assignments</h1>
-<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a><br />
-</div>
+<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a><br /></div>
 </div>
+<table class="imgtable"><tr><td>
+<img src="drawing_book.png" alt="Drawing of books" width="100px" />&nbsp;</td>
+<td align="left"><p>Unless otherwise noted, all reading assignments are from the 
+<a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
+</td></tr></table>
+<p>ccc</p>
