--- a/ala/readings.html
+++ b/ala/readings.html
@@ -43,3 +43,19 @@ MathJax.Hub.Config({
 <td align="left"><p>Unless otherwise noted, all reading assignments are from the 
 <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
+<ol>
+<li><p>By the end of 1st week (2/19/21)</p>
+</li>
+<li><p>By the end of 2nd week (2/26/21): The QR and spectral decompositions from <a href="https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos/MITRES_18_010S20_LA_Slides.pdf" target=&ldquo;blank&rdquo;>here</a>.</p>
+</li>
+</ol>
+<div id="footer">
+<div id="footer-text">
+Page generated 2021-02-16 11:27:09 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+</div>
+</div>
+</td>
+</tr>
+</table>
+</body>
+</html>
