updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -48,10 +48,12 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 2nd week (2/26/21): The QR and spectral decompositions from <a href="https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos/MITRES_18_010S20_LA_Slides.pdf" target=&ldquo;blank&rdquo;>here</a>.</p>
 </li>
+<li><p>By the end of 3rd week (3/5/21): Matrix diagonalization and singular value decomposition from <a href="https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos/MITRES_18_010S20_LA_Slides.pdf" target=&ldquo;blank&rdquo;>here</a>.</p>
+</li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-16 11:28:09 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-02-28 08:08:10 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
