--- a/ala/readings.html
+++ b/ala/readings.html
@@ -50,10 +50,12 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 3rd week (3/5/21): Matrix diagonalization and singular value decomposition from <a href="https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos/MITRES_18_010S20_LA_Slides.pdf" target=&ldquo;blank&rdquo;>here</a>.</p>
 </li>
+<li><p>By the end of 4th week (3/12/21): Vectors, linear functions, norm and distance, linear independence, matrices, and matrix examples.</p>
+</li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-02-28 08:08:10 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-03-07 07:12:03 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
