--- a/ala/readings.html
+++ b/ala/readings.html
@@ -31,6 +31,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="readings.html" class="current">Readings</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/7511/">Quera</a></div>
+<div class="menu-item"><a href="https://github.com/AppliedLinearAlgebra-Sharif">GitHub</a></div>
 <div class="menu-item"><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255/13992">Linear&nbsp;Algebra&nbsp;I</a></div>
 </td>
 <td id="layout-content">
@@ -52,10 +53,17 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 4th week (3/12/21): Vectors, linear functions, norm and distance, linear independence, matrices, and matrix examples.</p>
 </li>
+<li><p>By the end of 5th week (3/19/21): Introduction to the Julia language from <a href="https://web.stanford.edu/class/engr108/julia.html" target=&ldquo;blank&rdquo;>here</a>.</p>
+</li>
+<li><p>By the end of 6th week (3/26/21): Nowruz holiday</p>
+</li>
+<li><p>By the end of 7th week (4/2/21): Nowruz holiday
+</p>
+</li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-14 09:17:54 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-03-16 06:57:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
