updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -51,19 +51,24 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 3rd week (3/5/21): Matrix diagonalization and singular value decomposition from <a href="https://ocw.mit.edu/resources/res-18-010-a-2020-vision-of-linear-algebra-spring-2020/videos/MITRES_18_010S20_LA_Slides.pdf" target=&ldquo;blank&rdquo;>here</a>.</p>
 </li>
-<li><p>By the end of 4th week (3/12/21): Vectors, linear functions, norm and distance, linear independence, matrices, and matrix examples.</p>
+<li><p>By the end of 4th week (3/12/21): Vectors, linear functions, norm and distance, linear independence, and matrices.</p>
 </li>
 <li><p>By the end of 5th week (3/19/21): Introduction to the Julia language from <a href="https://web.stanford.edu/class/engr108/julia.html" target=&ldquo;blank&rdquo;>here</a>.</p>
 </li>
 <li><p>By the end of 6th week (3/26/21): Nowruz holiday</p>
 </li>
-<li><p>By the end of 7th week (4/2/21): Nowruz holiday
+<li><p>By the end of 7th week (4/2/21): Nowruz holiday</p>
+</li>
+<li><p>By the end of 8th week (4/9/21): Clustering and matrix examples.</p>
+</li>
+<li><p>By the end of 9th week (4/16/21): Linear equations and linear dynamical systems.
+
 </p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-16 06:57:06 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-04-11 06:51:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
